third_party/move/move-compiler-v2/transactional-tests/tests/no-v1-comparison/closures/round-trip/bug_16335_split.decompiled
//**** Cross-compiled for `move` syntax from `tests/no-v1-comparison/closures/bug_16335_split.move`

//# publish
module 0x42::Test {
    fun f3() {
        let _t0: || has copy + drop = || lambda__1__f3();
        let _t1: || has drop = || lambda__3__f3(_t0);
        _t1();
        let _t2: || has copy + drop = || lambda__4__f3();
        _t2();
    }
    fun lambda__1__f3() {
        ()
    }
    fun lambda__3__f3(p0: || has drop) {
        let _t2: || has copy + drop = || lambda__2__f3();
        let _t1 = p0;
        let _t4 = &mut _t1;
        *_t4 = _t2;
    }
    fun lambda__4__f3() {
        ()
    }
    fun lambda__2__f3() {
        ()
    }
}


//# run --verbose 0x42::Test::f3